src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
znk-exercise.desktop {
    display: block;
    position: relative;

    .btn-section {
        .btn-container {
            position: absolute;
            top: 0;
            bottom: 0;
            align-items: center;
            display: none;

            &.right-container {
                right: -40px;

                &.question-answered{
                    button{
                        background: $bgColor3;
                        svg-icon.chevron .st0{
                            stroke: $bgColor6;
                        }
                    }
                }

                button {
                    border-top-right-radius: 42px;
                    border-bottom-right-radius: 42px;
                    padding-left: 2px;

                    .chevron {
                        transform: rotate(-90deg);
                    }
                }
            }

            &.left-container {
                left: -40px;

                button {
                    border-top-left-radius: 42px;
                    border-bottom-left-radius: 42px;
                    padding-left: 5px;

                    .chevron {
                        transform: rotate(90deg);
                    }
                }
            }

            button {
                height: 80px;
                width: 40px;
                background: #fbfafa;

                &:focus {
                    outline: none;
                }

                svg-icon.chevron {
                    width: 33px;

                    .st0 {
                        stroke: #0a9bad;
                    }
                }
            }
        }

        .done-btn-wrap {
            z-index: 2;
            width: 160px;
            position: absolute;
            right: 12px;
            bottom: 10px;
            height: 37px;

            .done-btn {
                width: 100%;
                height: 100%;
                background: #ff931e;
                color: $fcColor2;
                font: {
                    family: Lato;
                    size: 13px;
                    weight: normal;
                }
                border: {
                    radius: 30px;
                }
            }
        }
    }

    &.done-btn-hide{
        .btn-section{
            .done-btn{
                display: none!important;
            }
        }
    }

    &.done-btn-show{
        .btn-section{
            .done-btn{
                display: block!important;
            }
        }
    }

    &.direction-right{
        .btn-section{
            .btn-container.left-container{
                display: inline-flex;
            }
        }
    }

    &.direction-left{
        .btn-section{
            .btn-container.right-container{
                display: inline-flex;
            }
        }
    }

    svg-icon.chevron {
        .st0 {
            fill: none;
            stroke: #231F20;
            stroke-width: 12;
            stroke-linecap: round;
            stroke-linejoin: round;
            stroke-miterlimit: 10;
        }
    }

    questions-carousel {
        &.znk-carousel-container {
            display: flex;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;

            .znk-carousel {
                @include absolute-full-cover;

                .slide {
                    width: 100%;
                    height: 100%;

                    question-builder {
                        width: 100%;
                        height: 100%;
                    }
                }
            }
        }
    }

    button {
        padding: 0;
        border: {
            top: none;
            right: none;
            bottom: none;
            left: none;
        }

        &:focus {
            outline: none;
        }
    }

    .shadow-container {
        width:100%;
        height:51px;
        position: absolute;
        bottom: 0;
        right: 0;
        box-shadow: 0px -4px 10px 0.1px white;
        z-index: 1;
    }

}

